# arrowkdb

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  README.md  datatype_layout.xlsx  install.bat  install.sh  test.q  travis_setup.sh
docs/: arrow-types.md  examples.md  index.md  null-bitmap.md  null-mapping.md  reference.md
examples/: README.md  batching_tables.q  concrete_datatypes.q  example.q  inferred_schema.q  nested_datatypes.q  null_bitmap.q  null_mapping.q  orc_dataloader.q  orc_null_support.q  parameterized_datatypes.q  performance.q  performance_mt.q  readme.q
perf/: performance.q
q/: arrowkdb.q  arrowkdb_new.q
src/: ArrayReader.cpp  ArrayReader.h  ArrayWriter.cpp  ArrayWriter.h  ArrowKdb.cpp  ArrowKdb.h  DatatypeStore.cpp  DatatypeStore.h  FieldStore.cpp  FieldStore.h  GenericStore.h  HelperFunctions.cpp  HelperFunctions.h  KdbOptions.cpp  KdbOptions.h  SchemaStore.cpp  SchemaStore.h  TableData.cpp  TableData.h  TypeCheck.h  linux_arrow_build.txt
tests/: .gitignore  basic.t  nested_null_bitmap.t  null_bitmap.t  null_mapping_extra.t  null_mapping_float.t  null_mapping_long.t  null_mapping_other.t  null_mapping_short.t  null_mapping_str.t  null_mapping_time.t  test.t  test_helper_function.q
tests/null_bitmap/: .gitignore  crucial_null_bitmap.t  glossary_null_bitmap.t  nested_null_bitmap.t  union_null_bitmap.t
tests/null_mapping/: .gitignore  null_mapping_extra.t  null_mapping_float.t  null_mapping_other.t  null_mapping_short.t  null_mapping_str.t
tests/orc_dataloader/: orc_compound_nulls.t  orc_contiguous_nulls.t  orc_dataloader.t  orc_numeric_nulls.t
vs2019/: arrowkdb.sln  arrowkdb.vcxproj  arrowkdb.vcxproj.filters
